<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/login"
            android:layout_marginTop="10dp"/>

        <!--CORREO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/CorreoLog"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/CorreoLog"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="#ffffff" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--CONTRASEÑA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"> <!--oculta el texto de la contraseña-->

            <EditText
                android:id="@+id/ContraLog"
                android:layout_width="279dp"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:hint="@string/ContraLog"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#ffffff" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--BOTON-->
        <Button
            android:id="@+id/Ingresar"
            android:text="@string/Ingresar"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>